# mcpp

./: .gitignore  CMakeLists.txt  JsAlgorythmProofOfConcept.js  JsDrawingCircleProofOfConceptToImplement.js  README.md  blocks.cpp  data.txt  emoji.cpp  hello.txt  items.cpp  main.cpp  rng.js  test.cpp  test.txt  test2.cpp  translation.cpp  usr.txt  world.cpp
backup/: db 04 10 2022.txt  db 27 10 2022.txt  usr 03 09 2022.txt  usr 07 09 2022.txt  usr 12 09 2022.txt  usr 23 08 2022 .txt
emoji/: list.txt
include/: DB.hpp  RNG.hpp  api.hpp  blocks.hpp  console.hpp  emoji.hpp  interactinoTemp.hpp  interaction.hpp  inventory.hpp  items.hpp  main.hpp  money.hpp  ranking.hpp  shop.hpp  skin.hpp  textUtility.hpp  translation.hpp  user.hpp  utility.hpp  world.hpp
include/httplib/: httplib.hpp
libs/dpp/src/dpp/: dpp.rc
libs/lsudms/: CMakeLists.txt  lsudms.cpp  test.cpp
libs/lsudms/include/: lsudms.hpp
ranking/: data.json  package-lock.json  package.json  rank.js
src/: DB.cpp  api.cpp  blocks.cpp  emoji.cpp  interaction.cpp  inventory.cpp  items.cpp  main.cpp  money.cpp  ranking.cpp  shop.cpp  skin.cpp  translation.cpp  world.cpp
testArea/: index.html  test.cpp
